# OpenRoadEd

./: .gitmodules  License.txt  OpenRoadEd.sln  Progress.txt  README.md  build.sh
Debug/Resources/: asphaltAlpha.tga  roadMarks.tga
OpenRoadEd/: CMakeLists.txt  OpenRoadEd.pro  OpenRoadEd.vcproj  main.cpp
OpenRoadEd/Cephes/: const.cpp  fresnl.cpp  mconf.h  polevl.c
OpenRoadEd/OpenDrive/: Junction.cpp  Junction.h  Lane.cpp  Lane.h  ObjectSignal.h  OpenDrive.cpp  OpenDrive.h  OpenDriveXmlParser.cpp  OpenDriveXmlParser.h  OpenDriveXmlWriter.cpp  OpenDriveXmlWriter.h  OtherStructures.cpp  OtherStructures.h  Road.cpp  Road.h  RoadGeometry.cpp  RoadGeometry.h
OpenRoadEd/Osg/: OSGCameraControls.cpp  OSGCameraControls.h  OSGCameraControls2.cpp  OSGCameraControls2.h  OSGConstants.h  OSGJunction.cpp  OSGJunction.h  OSGMain.cpp  OSGMain.h  OSGObjectNode.cpp  OSGObjectNode.h  OSGRecordsHelpers.cpp  OSGRecordsHelpers.h  OSGRoad.cpp  OSGRoad.h  OSGScenery.cpp  OSGScenery.h
OpenRoadEd/Qt/: MainWindow.cpp  MainWindow.h  QOSGWidget.cpp  QOSGWidget.h
OpenRoadEd/Qt/ConfigDialogs/: ReferencePlaneDialog.cpp  ReferencePlaneDialog.h  SceneryDialog.cpp  SceneryDialog.h
OpenRoadEd/Qt/CreationWidgets/: CreationAllJunction.cpp  CreationAllJunction.h  CreationAllRoad.cpp  CreationAllRoad.h  CreationPage.cpp  CreationPage.h  DeleteAll.cpp  DeleteAll.h
OpenRoadEd/Qt/SettingsWidgets/: SettingsElevationRecord.cpp  SettingsElevationRecord.h  SettingsGeometryLine.cpp  SettingsGeometryLine.h  SettingsGeometryTurn.cpp  SettingsGeometryTurn.h  SettingsJunction.cpp  SettingsJunction.h  SettingsJunctionConnection.cpp  SettingsJunctionConnection.h  SettingsJunctionController.cpp  SettingsJunctionController.h  SettingsJunctionLaneLink.cpp  SettingsJunctionLaneLink.h  SettingsJunctionPriority.cpp  SettingsJunctionPriority.h  SettingsLane.cpp  SettingsLane.h  SettingsLaneAccessRecord.cpp  SettingsLaneAccessRecord.h  SettingsLaneHeightRecord.cpp  SettingsLaneHeightRecord.h  SettingsLaneMaterialRecord.cpp  SettingsLaneMaterialRecord.h  SettingsLaneRoadMark.cpp  SettingsLaneRoadMark.h  SettingsLaneSection.cpp  SettingsLaneSection.h  SettingsLaneSpeedRecord.cpp  SettingsLaneSpeedRecord.h  SettingsLaneVisibilityRecord.cpp  SettingsLaneVisibilityRecord.h  SettingsLaneWidthRecord.cpp  SettingsLaneWidthRecord.h  SettingsLateralProfileCrossfall.cpp  SettingsLateralProfileCrossfall.h  SettingsLateralProfileSuper.cpp  SettingsLateralProfileSuper.h  SettingsPage.cpp  SettingsPage.h  (+4 more)
OpenRoadEd/Qt/ToolsDialogs/: ConnectRoadsDialog.cpp  ConnectRoadsDialog.h  GetRoadDialog.cpp  GetRoadDialog.h  LoadingDialog.cpp  LoadingDialog.h
OpenRoadEd/Qt/Tree/: RoadTree.cpp  RoadTree.h  RoadTreeItems.cpp  RoadTreeItems.h
OpenRoadEd/TinyXML/: tinyxml.cpp  tinyxml.h
Samples/: test.xodr
